# Depression_Classification

./: .env.example  README.md  alt-dataset.txt  main.py  pyproject.toml
data/interim/: X_test.csv  X_train.csv  X_val.csv
data/processed/: Test.csv  Train.csv  Y_Test.csv  Y_Train.csv  y_val.csv
notebooks/: 00_informe_final.ipynb  01_eda_inicial.ipynb  02_data_wrangling.ipynb  03_training_model.ipynb
notebooks/artifacts/preprocessor/: encoder.pkl  scaler.pkl
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/19f0aa34d6414e97b5f9cb6e9cd75317/: meta.yaml
notebooks/mlruns/0/19f0aa34d6414e97b5f9cb6e9cd75317/artifacts/preprocessor/: scaler.pkl
notebooks/mlruns/0/19f0aa34d6414e97b5f9cb6e9cd75317/tags/: mlflow.runName  mlflow.source.name
training_orchestration/: Entrenamiento_Modelo.py
